# discord-cpp

./: CMakeLists.txt  README.md
docs/html/: annotated.html  canal_8h_source.html  classCanal-members.html  classCanal.html  classCanalTexto-members.html  classCanalTexto.html  classCanalVoz-members.html  classCanalVoz.html  classExecutor-members.html  classExecutor.html  classMensagem-members.html  classMensagem.html  classServidor-members.html  classServidor.html  classSistema-members.html  classSistema.html  classUsuario-members.html  classUsuario.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  executor_8h_source.html  files.html  hierarchy.html  md_README.html  mensagem_8h_source.html  menudata.js  pages.html  servidor_8h_source.html  sistema_8h_source.html  texto_8h_source.html  usuario_8h_source.html  voz_8h_source.html
docs/html/search/: all_0.js  searchdata.js
docs/latex/: annotated.tex  canal_8h_source.tex  classCanal.tex  classCanalTexto.tex  classCanalVoz.tex  classExecutor.tex  classMensagem.tex  classServidor.tex  classSistema.tex  classUsuario.tex  executor_8h_source.tex  files.tex  md_README.tex  mensagem_8h_source.tex  refman.tex  servidor_8h_source.tex  sistema_8h_source.tex  texto_8h_source.tex  usuario_8h_source.tex  voz_8h_source.tex
html/: md_README.html
include/: canal.h  mensagem.h  servidor.h  sistema.h  texto.h  usuario.h  voz.h
include /: usuario.h
latex/: refman.tex
src/: canal.cpp  concordo.cpp  executor.cpp  mensagem.cpp  servidor.cpp  sistema.cpp  texto.cpp  usuario.cpp  usuarios.cpp  voz.cpp
